# eth.zig

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.zig  build.zig.zon
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bench/: RESULTS.md  RESULTS_VOLTAIRE.md  bench.zig  compare.sh  keccak_compare.zig
bench/alloy-bench/: Cargo.toml
bench/alloy-bench/benches/: eth_comparison.rs
bench/alloy-bench/src/: lib.rs
docs/: next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts
docs/content/docs/: benchmarks.mdx  comparison.mdx  comptime.mdx  contracts.mdx  contributing.mdx  ens.mdx  examples.mdx  faq.mdx  hd-wallets.mdx  installation.mdx  introduction.mdx  meta.json  modules.mdx  tokens.mdx  transactions.mdx  websockets.mdx
docs/src/app/: global.css  layout.tsx  not-found.tsx
docs/src/app/[[...slug]]/: layout.tsx  page.tsx
docs/src/lib/: layout.shared.tsx  source.ts
examples/: 01_derive_address.zig  02_check_balance.zig  03_sign_message.zig  04_send_transaction.zig  05_read_erc20.zig  06_hd_wallet.zig  07_comptime_selectors.zig  build.zig  build.zig.zon
src/: abi_decode.zig  abi_encode.zig  abi_json.zig  access_list.zig  eip712.zig  erc20.zig  erc721.zig  hd_wallet.zig  hex.zig  http_transport.zig  keccak.zig  keccak_optimized.zig  mnemonic.zig  multicall.zig  primitives.zig  provider.zig  rlp.zig  root.zig  secp256k1.zig  signer.zig  subscription.zig  transaction.zig  uint256.zig  wallet.zig
src/ens/: namehash.zig
src/utils/: units.zig
tests/: integration_tests.zig  unit_tests.zig
